	!!! Removed version numbers from jQuery files
	!!! Renamed tx_solr_facet_FacetRenderer to tx_solr_facet_AbstractFacetRenderer
	!!! Renamed tx_solr_facet_SimpleFacetRenderer to tx_solr_facet_SimpleFacetOptionsRenderer
	!!! Refactored facets rendering
	!!! Refactored tx_solr_facet_SimpleFacetOptionsRenderer to let tx_solr_facet_FacetOption create links and URLs
	!! Changed the form command to use the tx_solr_CommandPluginAware interface to make form modifiers aware of the current plugin
	!! Changed pagebrowser template file configuration from search.pagebrowser.templateFeile to templateFiles.pagebrowser
	!! Removed compatibility code for TYPO3 version before 4.5
	!! Changed calculation of site hashes, we're now using SHA-1 instead of MD5 - You have to reindex everything to support the changes
	!! Removed the renderer facet configuration option, this is now handled through facet types
	! Changed Index Queue tables to use InnoDB engine

	* Added Polish Translations, credits Jan Slusarczyk
	* Added initial API for Index Queue Item Indexing Properties
	* Added tx_solr_indexqueue_Item::getSite()
	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
	* Added method tx_solr_Site::getPages() to get all pages (page IDs) of a site
	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
	* Added a column in the Index Queue table to signal that an item has additional indexing properties
	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
	* Added support for persisting indexing properties of Index Queue items