@@ -13,6 +13,7 @@
 	!!! Renamed tx_solr_facet_SimpleFacetRenderer to tx_solr_facet_SimpleFacetOptionsRenderer
 	!!! Refactored facets rendering
 	!!! Refactored tx_solr_facet_SimpleFacetOptionsRenderer to let tx_solr_facet_FacetOption create links and URLs
+	!!! Renamed filter parser to filter encoder
 	!! Changed the form command to use the tx_solr_CommandPluginAware interface to make form modifiers aware of the current plugin
 	!! Changed pagebrowser template file configuration from search.pagebrowser.templateFeile to templateFiles.pagebrowser
 	!! Removed compatibility code for TYPO3 version before 4.5
